--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -7,6 +7,7 @@
 
 .navbar {
 	display: flex;
+	flex-wrap: wrap;
 	align-items: center;
 	justify-content: space-between;
 	padding-block: var(--space-2);
